Real State Template deploy

--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
+  "homepage": "https://yasminkasem66.github.io/Real-State-Template",
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.0.0",
     "autoprefixer": "^10.4.2",
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
+    "gh-pages": "^3.2.3"
   }
 }
